--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Sprint Demo</h1>
-    <h4>AI Core Pipelines DCE Chat</h4>
+    <h1>AI Core Pipelines - DCE Chat</h1>
 
    
     <!-- Start of Talkdesk Code -->
